--- a/components/data/tradeActivity/modal/ModalTradeTable.module.css
+++ b/components/data/tradeActivity/modal/ModalTradeTable.module.css
@@ -107,6 +107,18 @@
        content: url(../../../../public/3oneInch.svg);
    
    }
+
+   .zeroX {
+    color: white;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.zeroX::before {
+    content: url(../../../../public/0x-logo.svg);
+
+}
    
    .CURVE {
        color: white;
