--- a/components/data/tradeActivity/modal/ModalTradeTable.module.css
+++ b/components/data/tradeActivity/modal/ModalTradeTable.module.css
@@ -119,6 +119,18 @@
     content: url(../../../../public/0x-logo.svg);
 
 }
+
+.polynomial {
+    color: white;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.polynomial::before {
+    content: url(../../../../public/polynomial.svg);
+
+}
    
    .CURVE {
        color: white;
