new polynomial logo

--- a/components/data/tradeActivity/modal/ModalTradeTable.module.css
+++ b/components/data/tradeActivity/modal/ModalTradeTable.module.css
@@ -128,7 +128,7 @@
 }
 
 .polynomial::before {
-    content: url(../../../../public/polynomial.svg);
+    content: url(../../../../public/polynomial-1.svg);
 
 }
    
