--- a/components/data/tradeActivity/TradeTable.module.css
+++ b/components/data/tradeActivity/TradeTable.module.css
@@ -129,7 +129,7 @@
 }
 
 .polynomial::before {
-    content: url(../../../public/polynomial.svg);
+    content: url(../../../public/polynomial-1.svg);
 
 }
 
