--- a/components/data/tvl/Tooltip.module.css
+++ b/components/data/tvl/Tooltip.module.css
@@ -51,3 +51,11 @@
     padding: 0;
     margin: 0;
 }
+
+.TTloans {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #fff;
+    padding: 0;
+    margin: 0;
+}
