--- a/components/data/tvl/TotalValueLocked.module.css
+++ b/components/data/tvl/TotalValueLocked.module.css
@@ -82,6 +82,18 @@
   margin: 0 1.875rem;
 }
 
+.loan {
+  padding: 0 0.625rem;
+  margin: 0 1.875rem;
+}
+
+.loanColor {
+  color: #fff;
+  font-size: 0.75rem;
+  font-weight: 700;
+  margin: 0;
+}
+
 .stakingColor {
   color: #41c79d;
   font-size: 0.75rem;
