--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -6,12 +6,13 @@
     grid-template: auto / repeat(5,minmax(0,1fr));
     grid-template-areas:
      "snxStaked snxStaked tvl tvl tvl"
-     "stakeAPY stakeAPY tvl tvl tvl"
+     "snxStaked snxStaked tvl tvl tvl"
      "numStaker numStaker numStaker numStaker numStaker"
      "trades trades inflation inflation inflation"
      "trades trades tradeFee tradeFee tradeFee"
      "moreStats moreStats tradeFee tradeFee tradeFee"
-     "startStaking startStaking tradeFee tradeFee tradeFee";
+     "startStaking startStaking tradeFee tradeFee tradeFee"
+     "volumes volumes volumes volumes volumes";
      gap: clamp(0.875rem, 1vw, 1.875rem);
      justify-content: center;
      ;
