--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -9,9 +9,9 @@
      "snxStaked snxStaked tvl tvl tvl"
      "numStaker numStaker numStaker numStaker numStaker"
      "inflation inflation volumes volumes volumes"
-     "trades trades tradeFee tradeFee tradeFee"
-     "moreStats moreStats tradeFee tradeFee tradeFee"
-     "startStaking startStaking tradeFee tradeFee tradeFee";
+     "trades trades fees fees fees"
+     "moreStats moreStats fees fees fees"
+     "startStaking startStaking fees fees fees";
      gap: clamp(0.875rem, 1vw, 1.875rem);
      justify-content: center;
      ;
